Wed Apr 16 11:50:59 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* zlib.c: Remove paragraph with Free Software Foundation address.
	See 2 Jan 1997 entry in ../ChangeLog for rationale.

Tue Apr 15 00:36:23 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (patch_file_write): Always assign to final_nl, so that
	it ends up reflecting whether the data from the last call had a
	newline, not whether the data from any of the calls ended in a
	newline.  Doesn't matter with the current RCS_checkout
	implementation, but it will if RCS_checkout is changed to pass
	less than the entire file.

	* rcs.c (RCS_cmp_file): Change NULL to RUN_TTY in passing sout to
	RCS_checkout, for clarity.

	* import.c (update_rcs_file): Remove unused variable ierrno.

	* add.c, checkout.c, commit.c, diff.c, edit.c, import.c,
	history.c, log.c, main.c, patch.c, release.c, remove.c, rtag.c,
	status.c, tag.c, update.c, watch.c: Pass "+" to all calls to
	getopt.  This ensures that we maintain existing behavior even with
	glibc2.

	* filesubr.c (fopen_case): Don't set *PATHP if we return an
	error.  Since the 9 Apr 1997 change, the behavior has been to
	sometimes set it and sometimes not.
	* rcs.c (RCS_parse): Adjust callers to not free it.  Without this
	change, they could call free() on an uninitialized variable.

	* checkout.c (checkout): Add comment about export -k.

	* root.c (check_root_consistent): Add comment about wording of
	message.

Mon Apr 14 11:51:49 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (call_in_directory): If rdirp reaches the end of
	reposdirname, then just set it to NULL.  If server does not create
	directories one at a time, give a warning.
	* sanity.sh (modules3): Enable tests modules3-8 through
	modules3-11 for remote; tests for above fix.

	* client.c (call_in_directory): Don't set short_pathname to
	pathname for a while; just use pathname itself (cleans up a relic
	of the old "Repository" (not "Directory") code).  Add comment